# exp_mono

./: .env.example  .flake8  .gitignore  Makefile  README.md  ai_client.py  pyproject.toml  python_experiment.py  requirements.txt  server.py  text_processor.py
e2e_supabase_app/: .gitignore  DEVELOPMENT.md  Makefile  README.md  payload.json  pyproject.toml  server.py  setup_supabase.sql
e2e_supabase_app/scripts/: supabase.sh
e2e_supabase_app/src/: __init__.py
e2e_supabase_app/src/auth/: __init__.py  routes.py  services.py
e2e_supabase_app/src/config/: __init__.py  settings.py
e2e_supabase_app/src/db/: __init__.py  supabase_client.py
e2e_supabase_app/src/messages/: __init__.py  routes.py  services.py
e2e_supabase_app/src/profiles/: __init__.py  routes.py  services.py
e2e_supabase_app/src/server/: __init__.py  app.py  auth.py  cli.py  messages.py  supabase_client.py
e2e_supabase_app/src/server/templates/: index.html
e2e_supabase_app/src/utils/: __init__.py  decorators.py
e2e_supabase_app/src/web/: __init__.py  routes.py
e2e_supabase_app/src/web/static/css/: style.css
e2e_supabase_app/src/web/static/js/: auth.js  home.js  profile.js  tabs.js
e2e_supabase_app/src/web/templates/: index.html  login.html  profile.html
e2e_supabase_app/supabase/: README.md  config.toml  seed.sql
e2e_supabase_app/supabase/migrations/: 20230428000000_create_user_profiles.sql  20230428112000_add_biography_field.sql  20250428184318_add_profile_name_fields.sql
e2e_supabase_app/tests/: __init__.py  conftest.py
e2e_supabase_app/tests/server/: __init__.py  test_api.py  test_app.py
mono/: .cursorrules  .env.example  .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  python_experiment.py
mono/credentials/: README.md
mono/scripts/: email_analyzer.py  gmail_crawler.py  hello.py  prompts.py
mono/src/: text_processor.py
mono/src/data/: __init__.py
mono/src/langchain_agent/: agent.py  api.py
mono/src/llms/: __init__.py  ai_client.py
mono/src/mcp_server/: __init__.py  client.py  config.py  server.py
mono/src/server/: app.py  cli.py  socketio_instance.py
mono/src/text_processor/: __init__.py  processor.py
mono/src/utils/: settings.py
mono/tests/: conftest.py
mono/tests/langchain_agent/: test_agent.py  test_api.py
mono/tests/llms/: test_ai_models.py
mono/tests/mcp_server/: __init__.py  test_client.py  test_config.py  test_integration.py
mono/tests/planner/: __init__.py
src/: __init__.py  ai_client.py  plan_creator.py  settings.py  text_processor.py
src/langchain_agent/: __init__.py  agent.py  api.py
src/llms/: __init__.py  ai_client.py
src/models/: storyboard.py
src/planner/: __init__.py
src/server/: __init__.py  app.py  cli.py
src/utils/: __init__.py  settings.py
tests/: __init__.py  conftest.py  test_ai_models.py
tests/langchain_agent/: __init__.py  test_agent.py  test_api.py
tests/llms/: __init__.py  test_ai_models.py
(+105 files in other folders)
