[tool.poetry]
name = "python-experiment"
version = "0.1.0"
description = "A simple Python experiment with Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"  # Simple CLI library for command-line interfaces
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"  # Settings management with Pydantic
openai = "^1.4.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.2"  # Retry library for API calls
google-generativeai = "0.3.2"  # Google's Gemini API with fixed version

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 